gets and kills pid of process on linux